phase2/test_extra/test_5.out
Error type 5 at Line 34: unmatching type on both sides of assignment
Error type 1 at Line 36: "b1" is used without a definition
Error type 2 at Line 37: "result" is invoked without a definition
